syntax = "proto3";

package example;
option go_package = ".;main";

import "google/protobuf/struct.proto";

message ResponseSimple {
  map<string, User> users = 1;
}

message ResponseWithCustomNullable {
  message NullableUser {
    oneof kind {
      google.protobuf.NullValue null = 1;
      User user = 2;
    }
  }
  map<string, NullableUser> users = 1;
}

message ResponseWithValue {
  map<string, google.protobuf.Value> users = 1;
}

message User {
  string id = 1;
  string email = 2;
}
